# ChARGe

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  run_multiserver_vllm.sh  run_retro_exp.sh  run_retro_hf.sh  run_retro_vllm.sh
charge/: Experiment.py  __init__.py  _to_mcp.py  install.py
charge/algorithms/: README.md  __init__.py  rsa.py
charge/clients/: AgentPool.py  Client.py  agent.py  agent_factory.py  agentframework.py  agentframework_utils.py  autogen.py  autogen_utils.py  client.py  hf.py  huggingface_client.py  logging.py  openai_base.py  reasoning.py  vllm_client.py
charge/experiments/: AutoGenExperiment.py  Experiment.py  LMOExperiment.py  experiment.py
charge/rag/: embedders.py  prompts.py  rag_mcp_server.py
charge/servers/: AiZynthTools.py  FLASKv2_reactions.py  README.md  SMARTS_reactions.py  SMARTS_reactions_utils.py  SMILES.py  SMILES_utils.py  aizynth_server.py  chemprop_make_prediction.py  get_chemprop2_preds.py  log_progress.py  molecular_generation_server.py  molecular_minds_property_predictions.py  molecular_property_utils.py  molecule_pricer.py  nnp_predictor.py  polymerizer.py  retrosynthesis_reaction_server.py  server_utils.py
charge/tasks/: LMOTask.py  RetrosynthesisTask.py  Task.py  task.py
charge/utils/: helper_funcs.py  mcp_workbench_utils.py  system_utils.py
environment/: charge-oss-mxfp4.sh
examples/Molecular_Minds/: main.py
examples/Molecule_Generation/: README.md  main.py
examples/Multi_Server_Experiments/: README.md  main.py  server_start_commands.sh  sse_server_2.py
(+50 files in other folders)
